# lxqt-notificationd

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README.md  lxqt-config-notificationd.ts  lxqt-config-notificationd_ar.ts  lxqt-config-notificationd_ca.ts  lxqt-config-notificationd_cs.ts  lxqt-config-notificationd_da.ts  lxqt-config-notificationd_de.ts  lxqt-config-notificationd_el.ts  lxqt-config-notificationd_es.ts  lxqt-config-notificationd_fr.ts  lxqt-config-notificationd_hr.ts  lxqt-config-notificationd_hu.ts  lxqt-config-notificationd_id.ts  lxqt-config-notificationd_it.ts  lxqt-config-notificationd_lt.ts  lxqt-config-notificationd_lv.ts  lxqt-config-notificationd_nl.ts  lxqt-config-notificationd_pl.ts  lxqt-config-notificationd_pt.ts  lxqt-config-notificationd_ru.ts  lxqt-config-notificationd_tr.ts  lxqt-config-notificationd_uk.ts  lxqt-config-notificationd_zh_CN.ts  lxqt-notificationd.ts  lxqt-notificationd_ar.ts  lxqt-notificationd_ca.ts  lxqt-notificationd_de.ts  lxqt-notificationd_el.ts  lxqt-notificationd_es.ts  lxqt-notificationd_fr.ts  lxqt-notificationd_hu.ts  lxqt-notificationd_id.ts  lxqt-notificationd_ja.ts  lxqt-notificationd_pl.ts  lxqt-notificationd_pt.ts  lxqt-notificationd_uk.ts  (+2 more)
autostart/: CMakeLists.txt  lxqt-notifications.desktop  lxqt-notifications.desktop.in
autostart/translations/: lxqt-notifications_ar.desktop  lxqt-notifications_ar.desktop.yaml  lxqt-notifications_bg.desktop.yaml  lxqt-notifications_ca.desktop.yaml  lxqt-notifications_cs.desktop  lxqt-notifications_cs.desktop.yaml  lxqt-notifications_cs_CZ.desktop  lxqt-notifications_da.desktop  lxqt-notifications_da.desktop.yaml  lxqt-notifications_da_DK.desktop  lxqt-notifications_de.desktop.yaml  lxqt-notifications_de_DE.desktop  lxqt-notifications_el.desktop.yaml  lxqt-notifications_el_GR.desktop  lxqt-notifications_en_GB.desktop.yaml  lxqt-notifications_eo.desktop  lxqt-notifications_eo.desktop.yaml  lxqt-notifications_es.desktop  lxqt-notifications_es_VE.desktop  lxqt-notifications_es_VE.desktop.yaml  lxqt-notifications_et.desktop.yaml  lxqt-notifications_eu.desktop  lxqt-notifications_eu.desktop.yaml  lxqt-notifications_fi.desktop  lxqt-notifications_fi.desktop.yaml  lxqt-notifications_fr.desktop.yaml  lxqt-notifications_fr_FR.desktop  lxqt-notifications_gl.desktop.yaml  lxqt-notifications_he.desktop.yaml  lxqt-notifications_hr.desktop.yaml  lxqt-notifications_hu.desktop  lxqt-notifications_hu.desktop.yaml  lxqt-notifications_it.desktop.yaml  lxqt-notifications_it_IT.desktop  lxqt-notifications_it_IT.desktop.yaml  lxqt-notifications_ja.desktop  lxqt-notifications_ja.desktop.yaml  lxqt-notifications_ka.desktop.yaml  lxqt-notifications_kk.desktop.yaml  lxqt-notifications_ko.desktop.yaml  (+35 more)
config/: CMakeLists.txt  advancedsettings.cpp  advancedsettings.h  advancedsettings.ui  appearancesettings.cpp  appearancesettings.h  appearancesettings.ui  basicsettings.cpp  basicsettings.h  basicsettings.ui  generalsettings.cpp  generalsettings.h  generalsettings.ui  lxqt-config-notificationd.desktop.in  main.cpp  mainwindow.cpp  mainwindow.h
config/translations/: CMakeLists.txt  lxqt-config-notificationd.desktop.yaml  lxqt-config-notificationd.ts  lxqt-config-notificationd.ts.src  lxqt-config-notificationd_ar.desktop  lxqt-config-notificationd_ar.desktop.yaml  lxqt-config-notificationd_ar.ts  lxqt-config-notificationd_arn.ts  lxqt-config-notificationd_ast.ts  lxqt-config-notificationd_bg.desktop.yaml  lxqt-config-notificationd_bg.ts  lxqt-config-notificationd_ca.desktop.yaml  lxqt-config-notificationd_ca.ts  lxqt-config-notificationd_cs.desktop  lxqt-config-notificationd_cs.desktop.yaml  lxqt-config-notificationd_cs.ts  lxqt-config-notificationd_cs_CZ.desktop  lxqt-config-notificationd_cy.ts  lxqt-config-notificationd_da.desktop  lxqt-config-notificationd_da.desktop.yaml  lxqt-config-notificationd_da.ts  lxqt-config-notificationd_da_DK.desktop  lxqt-config-notificationd_de.desktop  lxqt-config-notificationd_de.desktop.yaml  lxqt-config-notificationd_de.ts  lxqt-config-notificationd_de_DE.desktop  lxqt-config-notificationd_el.desktop.yaml  lxqt-config-notificationd_el.ts  lxqt-config-notificationd_el_GR.desktop  lxqt-config-notificationd_en_GB.ts  lxqt-config-notificationd_eo.desktop  lxqt-config-notificationd_eo.desktop.yaml  lxqt-config-notificationd_es.desktop  lxqt-config-notificationd_es.desktop.yaml  lxqt-config-notificationd_es.ts  lxqt-config-notificationd_es_VE.desktop  lxqt-config-notificationd_es_VE.desktop.yaml  lxqt-config-notificationd_et.desktop.yaml  lxqt-config-notificationd_et.ts  lxqt-config-notificationd_eu.desktop  (+91 more)
docker/: Dockerfile.debian_bookworm  Makefile
src/: CMakeLists.txt  main.cpp  notification.cpp  notification.h  notification.ui  notificationarea.cpp  notificationarea.h  notificationlayout.cpp  notificationlayout.h  notificationwidgets.cpp  notificationwidgets.h  notifyd.cpp  notifyd.h
src/translations/: CMakeLists.txt  lxqt-notificationd.ts  lxqt-notificationd_ar.ts  lxqt-notificationd_arn.ts  lxqt-notificationd_ast.ts  lxqt-notificationd_bg.ts  lxqt-notificationd_ca.ts  lxqt-notificationd_cs.ts  lxqt-notificationd_cy.ts  lxqt-notificationd_da.ts  lxqt-notificationd_de.ts  lxqt-notificationd_el.ts  lxqt-notificationd_en_GB.ts  lxqt-notificationd_es.ts  lxqt-notificationd_et.ts  lxqt-notificationd_fi.ts  lxqt-notificationd_fr.ts  lxqt-notificationd_gl.ts  lxqt-notificationd_he.ts  lxqt-notificationd_hr.ts  lxqt-notificationd_hu.ts  lxqt-notificationd_hu_HU.ts  lxqt-notificationd_id.ts  lxqt-notificationd_it.ts  lxqt-notificationd_ja.ts  lxqt-notificationd_ka.ts  lxqt-notificationd_kk.ts  lxqt-notificationd_ko.ts  lxqt-notificationd_lg.ts  lxqt-notificationd_lt.ts  lxqt-notificationd_lv.ts  lxqt-notificationd_nb_NO.ts  lxqt-notificationd_nl.ts  lxqt-notificationd_oc.ts  lxqt-notificationd_pa.ts  lxqt-notificationd_pl.ts  lxqt-notificationd_pl_PL.ts  lxqt-notificationd_pt.ts  lxqt-notificationd_pt_BR.ts  lxqt-notificationd_ru.ts  (+9 more)
test/: NotifyTest.pro  lxqt-notification-test.py  main.cpp  mainwindow.cpp  mainwindow.h
